Add missing depedencies

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@capacitor/core": "2.4.7",
+    "@capacitor/ios": "^2.4.7",
+    "@ionic-native/core": "^5.33.0",
+    "@ionic-native/file": "^5.33.0",
+    "@ionic-native/video-capture-plus": "^5.33.0",
     "@ionic/core": "^5.6.6",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
@@ -16,6 +20,9 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-video-capture-plus": "^1.0.0",
     "ionicons": "^5.4.0",
     "lodash": "^4.17.21",
     "react": "^17.0.1",
