--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@capacitor/android": "^3.0.1",
     "@capacitor/core": "2.4.7",
     "@capacitor/ios": "^2.4.7",
     "@ionic-native/core": "^5.33.0",
@@ -21,13 +22,11 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
-<<<<<<< HEAD
+    "axios": "^0.21.1",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-video-capture-plus": "^1.0.0",
-=======
     "immer": "^9.0.3",
->>>>>>> Regionalism-Redux
     "ionicons": "^5.4.0",
     "lodash": "^4.17.21",
     "react": "^17.0.1",
