--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -9,10 +9,10 @@ android {
 
 apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
-
+    implementation project(':capacitor-filesystem')
 
 }
-
+apply from: "../../node_modules/cordova-plugin-video-editor/src/android/build.gradle"
 
 if (hasProperty('postBuildExtras')) {
   postBuildExtras()
