--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -10,5 +10,11 @@
       "launchShowDuration": 0
     }
   },
-  "cordova": {}
+  "cordova": {},
+  "server": {
+    "androidScheme": "http",
+    "allowNavigation": [
+      "lavid.nsa.root.sx"
+    ]
+  }
 }
