--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@capacitor/android": "^3.0.1",
+    "@capacitor/android": "^3.0.2",
     "@capacitor/core": "2.4.7",
+    "@capacitor/filesystem": "^1.0.2",
     "@capacitor/ios": "^2.4.7",
     "@ionic-native/core": "^5.33.0",
     "@ionic-native/file": "^5.33.0",
     "@ionic-native/video-capture-plus": "^5.33.0",
+    "@ionic-native/video-editor": "^5.33.1",
     "@ionic/core": "^5.6.6",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
@@ -26,6 +28,7 @@
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-video-capture-plus": "^1.0.0",
+    "cordova-plugin-video-editor": "^1.1.3",
     "immer": "^9.0.3",
     "ionicons": "^5.4.0",
     "lodash": "^4.17.21",
