--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "4.0.2",
     "react-unity-webgl": "7.1.10",
     "redux": "^4.1.0",
+    "redux-saga": "^1.1.3",
     "typesafe-actions": "^5.1.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
