--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -9,8 +9,8 @@ android {
 
 apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
-    implementation project(':capacitor-filesystem')
-
+    implementation project(':byteowls-capacitor-filesharer')
+    implementation "com.android.support:support-v4:27.+"
 }
 apply from: "../../node_modules/cordova-plugin-video-editor/src/android/build.gradle"
 
