--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@angular/core": "^12.2.0",
+    "@byteowls/capacitor-filesharer": "^2.0.0",
     "@capacitor/android": "^3.0.2",
     "@capacitor/core": "2.4.7",
-    "@capacitor/filesystem": "^1.0.2",
     "@capacitor/ios": "^2.4.7",
     "@ionic-native/core": "^5.33.0",
     "@ionic-native/file": "^5.33.0",
+    "@ionic-native/file-opener": "^5.35.0",
+    "@ionic-native/file-transfer": "^5.35.0",
     "@ionic-native/native-storage": "^5.34.0",
     "@ionic-native/video-capture-plus": "^5.33.0",
     "@ionic-native/video-editor": "^5.33.1",
@@ -29,6 +32,7 @@
     "axios": "^0.21.1",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file-opener2": "^3.0.5",
     "cordova-plugin-video-capture-plus": "^1.0.0",
     "cordova-plugin-video-editor": "^1.1.3",
     "immer": "^9.0.3",
@@ -40,11 +44,12 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "react-unity-webgl": "7.1.10",
+    "react-unity-webgl": "7.x",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
     "typesafe-actions": "^5.1.0",
     "typescript": "^4.1.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
@@ -80,6 +85,7 @@
   "devDependencies": {
     "@capacitor/cli": "2.4.7",
     "@types/lodash": "^4.14.170",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.23.0",
