--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@angular/core": "^12.2.0",
     "@byteowls/capacitor-filesharer": "^2.0.0",
+    "@capacitor-community/react-hooks": "^0.0.11",
     "@capacitor/android": "^3.0.2",
     "@capacitor/core": "2.4.7",
     "@capacitor/ios": "^2.4.7",
