--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@capacitor/ios": "^2.4.7",
     "@ionic-native/core": "^5.33.0",
     "@ionic-native/file": "^5.33.0",
-    "@ionic-native/native-storage": "^5.34.0",
+    "@ionic-native/native-storage": "^5.36.0",
     "@ionic-native/video-capture-plus": "^5.33.0",
     "@ionic-native/video-editor": "^5.33.1",
     "@ionic/core": "^5.6.6",
@@ -29,6 +29,7 @@
     "axios": "^0.21.1",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-video-capture-plus": "^1.0.0",
     "cordova-plugin-video-editor": "^1.1.3",
     "immer": "^9.0.3",
