--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -11,6 +11,7 @@ apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
     implementation project(':byteowls-capacitor-filesharer')
     implementation "com.android.support:support-v4:27.+"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
 }
 apply from: "../../node_modules/cordova-plugin-video-editor/src/android/build.gradle"
 
