--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ionic-native/core": "^5.33.0",
     "@ionic-native/file": "^5.33.0",
     "@ionic-native/native-storage": "^5.36.0",
+    "@ionic-native/social-sharing": "^5.36.0",
     "@ionic-native/video-capture-plus": "^5.33.0",
     "@ionic-native/video-editor": "^5.35.0",
     "@ionic/core": "^5.6.6",
@@ -21,7 +22,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^27.0.1",
     "@types/node": "^12.19.15",
     "@types/react": "^16.14.3",
     "@types/react-dom": "^16.9.10",
@@ -35,6 +36,8 @@
     "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-video-capture-plus": "^1.0.0",
     "cordova-plugin-video-editor": "^1.1.3",
+    "cordova-plugin-x-socialsharing": "^6.0.3",
+    "es6-promise-plugin": "^4.2.2",
     "immer": "^9.0.3",
     "ionicons": "^5.4.0",
     "lodash": "^4.17.21",
