Closing app when you click back button and you are at home path

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@capacitor/app": "1.0.3",
     "@capacitor/core": "3.2.3",
     "@capacitor/haptics": "1.0.3",
+    "@capacitor/ios": "^3.2.3",
     "@capacitor/keyboard": "1.0.3",
     "@capacitor/status-bar": "1.0.3",
     "@ionic-native/core": "^5.36.0",
@@ -29,6 +30,8 @@
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.4",
     "cordova-plugin-nativestorage": "^2.3.2",
+    "cordova-plugin-x-socialsharing": "^6.0.3",
+    "es6-promise-plugin": "^4.2.2",
     "immer": "^9.0.6",
     "ionicons": "^5.4.0",
     "lodash": "^4.17.21",
