--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@capacitor/android": "3.2.3",
+    "@capacitor/android": "3.2.4",
     "@capacitor/app": "1.0.3",
     "@capacitor/core": "3.2.3",
     "@capacitor/haptics": "1.0.3",
@@ -29,7 +29,10 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.4",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-nativestorage": "^2.3.2",
+    "cordova-plugin-video-capture-plus": "^1.0.0",
+    "cordova-plugin-video-editor": "^1.1.3",
     "cordova-plugin-x-socialsharing": "^6.0.3",
     "es6-promise-plugin": "^4.2.2",
     "immer": "^9.0.6",
