--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-	"appId": "br.ufpb.lavid.vlibras",
-	"appName": "VLibrasMobile",
+	"appId": "com.lavid.vlibrasdroid",
+	"appName": "VLibras",
 	"webDir": "build",
 	"bundledWebRuntime": false,
 	"cordova": {},
