--- a/.eslintignore
+++ b/.eslintignore
@@ -1,6 +1,5 @@
 **/*.js
 node_modules
 build
-# /src/react-app-env.d.ts
-# /src/reportWebVitals.ts
-src
+src/react-app-env.d.ts
+src/reportWebVitals.ts
