--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:usesCleartextTraffic="true" 
         tools:targetApi="28" 
         android:requestLegacyExternalStorage="true"
+        android:screenOrientation="portrait"
         >
 
         <activity
