--- a/package.json
+++ b/package.json
@@ -3,49 +3,43 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@capacitor/android": "3.2.4",
-    "@capacitor/app": "1.0.3",
-    "@capacitor/core": "3.2.3",
-    "@capacitor/haptics": "1.0.3",
-    "@capacitor/ios": "3.2.3",
-    "@capacitor/keyboard": "1.0.3",
-    "@capacitor/status-bar": "1.0.3",
-    "@ionic-native/background-mode": "^5.36.0",
+    "@capacitor/android": "^5.0.3",
+    "@capacitor/app": "^5.0.2",
+    "@capacitor/core": "^5.0.3",
+    "@capacitor/haptics": "^5.0.2",
+    "@capacitor/ios": "^5.0.3",
+    "@capacitor/keyboard": "^5.0.2",
+    "@capacitor/status-bar": "^5.0.2",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/file": "^5.36.0",
     "@ionic-native/native-storage": "^5.36.0",
     "@ionic-native/social-sharing": "^5.36.0",
     "@ionic-native/video-capture-plus": "^5.33.0",
     "@ionic-native/video-editor": "^5.35.0",
-    "@ionic/core": "^5.8.0",
-    "@ionic/react": "^5.5.0",
-    "@ionic/react-router": "^5.5.0",
+    "@ionic/core": "^7.0.6",
+    "@ionic/react": "7",
+    "@ionic/react-router": "7",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^12.19.15",
-    "@types/react": "^16.14.3",
-    "@types/react-dom": "^16.9.10",
-    "@types/react-router": "^5.1.11",
-    "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.4",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-video-capture-plus": "^1.0.0",
     "cordova-plugin-video-editor": "^1.1.3",
     "cordova-plugin-x-socialsharing": "^6.0.3",
+    "css-loader": "^6.7.3",
     "es6-promise-plugin": "^4.2.2",
     "immer": "^9.0.6",
-    "ionicons": "^5.4.0",
+    "ionicons": "^7.1.0",
     "lodash": "^4.17.21",
     "prettier": "^2.4.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-redux": "^7.2.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^5.0.1",
     "react-unity-webgl": "^7.1.13",
     "redux": "^4.1.1",
     "redux-saga": "^1.1.3",
@@ -70,7 +64,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -79,33 +73,24 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    "Chrome >=79",
+    "ChromeAndroid >=79",
+    "Firefox >=70",
+    "Edge >=79",
+    "Safari >=14",
+    "iOS >=14"
+  ],
   "devDependencies": {
-    "@capacitor/cli": "3.2.3",
+    "@capacitor/cli": "^5.0.3",
+    "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.173",
-    "@types/uuid": "^8.3.1",
-    "eslint": "^7.23.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.23.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.2.1",
-    "prettier-eslint": "^15.0.1"
+    "@types/node": "^12.19.15",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "18.0.6",
+    "@types/react-router": "^5.1.11",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/uuid": "^8.3.1"
   },
   "description": "An Ionic project"
 }
