Fix android build issues.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,10 @@
 {
     "env": {
-        "browser": true,
-        "es2021": true
+      "browser": true,
+      "commonjs": true,
+      "es2021": true,
+      "jest": true,
+      "node": true
     },
     "extends": [
         "eslint:recommended",
