--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@capacitor/android": "^5.0.3",
     "@capacitor/app": "^5.0.2",
     "@capacitor/core": "^5.0.3",
+    "@capacitor/filesystem": "^5.0.4",
     "@capacitor/haptics": "^5.0.2",
     "@capacitor/ios": "5.0.4",
     "@capacitor/keyboard": "^5.0.2",
+    "@capacitor/share": "^5.0.4",
     "@capacitor/status-bar": "^5.0.2",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/file": "^5.36.0",
