--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -8,7 +8,8 @@
 		"androidScheme": "http",
 		"allowNavigation": [
 			"lavid.nsa.root.sx"
-		]
+		],
+		"url": "http://192.168.0.9:8100"
 	},
 	"plugins": {
 		"SplashScreen": {
