--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@capacitor/android": "^5.0.3",
     "@capacitor/app": "^5.0.2",
     "@capacitor/core": "^5.0.3",
+    "@capacitor/device": "^5.0.6",
     "@capacitor/filesystem": "^5.0.4",
     "@capacitor/haptics": "^5.0.2",
     "@capacitor/ios": "5.0.4",
