--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -50,10 +50,9 @@
           }
         }
       ],
-      "react/jsx-indent": ["error", 2],
-      "react/jsx-indent-props": ["error", 2],
       "no-trailing-spaces": "error",
-      "max-len": ["error", { "code": 120 }]
+      "max-len": ["error", { "code": 120 }],
+      "@typescript-eslint/no-unused-vars": [1, { "argsIgnorePattern": "^_" }]
     },
     "settings": {
       "import/resolver": {
