--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@capacitor/android": "^5.0.3",
-    "@capacitor/app": "^5.0.2",
-    "@capacitor/core": "^5.0.3",
-    "@capacitor/device": "^5.0.6",
-    "@capacitor/filesystem": "^5.0.4",
-    "@capacitor/haptics": "^5.0.2",
-    "@capacitor/ios": "5.0.4",
-    "@capacitor/keyboard": "^5.0.2",
-    "@capacitor/share": "^5.0.4",
-    "@capacitor/status-bar": "^5.0.2",
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/app": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/device": "^6.0.0",
+    "@capacitor/filesystem": "^6.0.0",
+    "@capacitor/haptics": "^6.0.0",
+    "@capacitor/ios": "^6.0.0",
+    "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/share": "^6.0.0",
+    "@capacitor/status-bar": "^6.0.0",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/file": "^5.36.0",
     "@ionic-native/native-storage": "^5.36.0",
@@ -78,7 +78,7 @@
     "iOS >=14"
   ],
   "devDependencies": {
-    "@capacitor/cli": "^5.0.3",
+    "@capacitor/cli": "^6.0.0",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.173",
     "@types/node": "^12.19.15",
