--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,13 +3,13 @@ apply plugin: 'com.android.application'
 android {
 
   namespace 'com.lavid.vlibrasdroid'
-  compileSdkVersion rootProject.ext.compileSdkVersion
+  compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
         applicationId "com.lavid.vlibrasdroid"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 27
-        versionName "4.0.5"
+        versionCode 30
+        versionName "4.0.6"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
              // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
