Added network error handling for dictionary requests.

--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -21,6 +21,7 @@
 		"FilesystemPlugin",
 		"HapticsPlugin",
 		"KeyboardPlugin",
+		"CAPNetworkPlugin",
 		"SharePlugin",
 		"StatusBarPlugin",
 		"CDVPlugin"
