--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@capacitor/haptics": "^6.0.0",
     "@capacitor/ios": "^6.0.0",
     "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/network": "^6.0.0",
     "@capacitor/share": "^6.0.0",
     "@capacitor/status-bar": "^6.0.0",
     "@ionic-native/core": "^5.36.0",
